fixed burger menu placement on mobile

--- a/sass/components/navigation/_header.scss
+++ b/sass/components/navigation/_header.scss
@@ -17,9 +17,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin-top: 4rem;
-    margin-right: 1.5rem;
-
+    margin: 1rem;
     svg{
         width: 34px !important;
         height: 34px !important;
